# romerea_toolkit

./: CV work  README.md  cleanup_lpv.py  cleanup_on_local.py  combine_cvs.py  crossmatch.py  cv.py  cv_script.py  cv_to_dat.py  extr_daniel_model.py  extract.py  extractinglightcurves.py  formatting_for_microLIA.py  indiv.py  inspect_model.py  lookatfits.py  lpv_script.py  making_headers.py  makinglightcurves.py  mass_const_lc.py  ml_script.py  new_constant.py  pyproject.toml  rrlyr_script.py  scatterplots_n_lcs.py  star49049_lc.py  star_indexing.py  test_indiv.py  training_script.py  training_script_g.py  training_script_i.py  training_script_r.py  traintestg.py  traintestgr.py  traintesti.py  traintestr.py  twice_thresh_mass_plots.py  twice_threshold_plots.py
docs/: finding_constant_stars.ipynb  lightcurve_statistics.ipynb
src/IO/: crossmatch.py  formatting_for_microLIA.py
