[tool.poetry]
name = "romerea_toolkit"
version = "0.1.0"
description = ""
authors = ["Rachel Street <rstreet@lco.global>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
astropy = "6.0.1"
astroquery = "0.4.7"
fsspec = "2024.10.0"
photutils = "1.11.0"
scikit-image = "0.24.0"
pytest = "8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

